--- a/LLM Engineering/Agentic AI/AgentsByHand.ipynb
+++ b/LLM Engineering/Agentic AI/AgentsByHand.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIPYAW2pgGt9TTLQGH2Sbc",
+      "authorship_tag": "ABX9TyOjsV+fWEbXd9GuIMVm0laJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,12 @@
       "metadata": {
         "id": "oaaL_kkaLfcI"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 30,
       "metadata": {
         "id": "wT4WCeG-J2jb"
       },
@@ -107,16 +107,26 @@
       "metadata": {
         "id": "MAEKdNZmK7wB"
       },
-      "execution_count": 6,
+      "execution_count": 62,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Useage of our custom client:\n",
-        "client = GeminiClient(api_key)\n",
+        "client = GeminiClient(api_key)"
+      ],
+      "metadata": {
+        "id": "MxoWNaasLncS"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Sample Prompt:\n",
-        "prompt = \"Explain what are AI Agents in a sentence.\"\n",
+        "prompt = \"Explain what are AI Agents in a sentence. in Malayalam\"\n",
         "response = client.generate_content(prompt)\n",
         "print(f\"Response: {response}\")"
       ],
@@ -124,16 +134,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "MxoWNaasLncS",
-        "outputId": "c39f41d9-9733-4110-ace8-f9f2e6f99a4d"
+        "id": "Cm9uLWPsPfeN",
+        "outputId": "fa24dc9c-6d64-41d7-b0ec-3d6d121b38d2"
       },
-      "execution_count": 7,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Response: AI Agents are autonomous AI-powered entities designed to perceive environments, make decisions, and take actions to achieve specific goals without constant human intervention.\n"
+            "Response: ലക്ഷ്യങ്ങൾ നേടാനായി സ്വയം ചിന്തിച്ച് പ്രവർത്തിക്കുന്ന ആർട്ടിഫിഷ്യൽ ഇൻ്റലിജൻസ് സംവിധാനങ്ങളാണ് AI ഏജൻ്റുമാർ.\n"
           ]
         }
       ]
@@ -160,7 +170,8 @@
         "      tool_name = name or func.__name__\n",
         "      self.tools[tool_name] = {\n",
         "          \"function_name\":func,\n",
-        "          \"description\":description or func.__doc__\n",
+        "          \"description\":description or func.__doc__,\n",
+        "          \"call\": \"tool_name(*args, **kwargs)\"\n",
         "      }\n",
         "      return func\n",
         "    return decorator\n",
@@ -175,7 +186,7 @@
       "metadata": {
         "id": "ywzL29QtLwsO"
       },
-      "execution_count": 30,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -187,7 +198,7 @@
       "metadata": {
         "id": "K4VZ9jl7hElp"
       },
-      "execution_count": 31,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -250,7 +261,7 @@
       "metadata": {
         "id": "kk7JEoPHcSH2"
       },
-      "execution_count": 32,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -307,7 +318,7 @@
       "metadata": {
         "id": "tI5h02StcUEo"
       },
-      "execution_count": 33,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -374,7 +385,7 @@
       "metadata": {
         "id": "jSu2yXDtcVoy"
       },
-      "execution_count": 34,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -424,7 +435,7 @@
       "metadata": {
         "id": "RzN4bfSEcYQH"
       },
-      "execution_count": 35,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -483,7 +494,7 @@
       "metadata": {
         "id": "pMbhkFYhbqB8"
       },
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -494,12 +505,12 @@
       ],
       "metadata": {
         "id": "KErY3Hf2mMrn",
-        "outputId": "4f6e2cae-f771-4859-8454-4bae5087bd4e",
+        "outputId": "aaaf0acb-5ee2-4c5a-f92a-2690670ab764",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 41
         }
       ]
     },
@@ -525,12 +536,12 @@
       ],
       "metadata": {
         "id": "lNg-RruBtQKQ",
-        "outputId": "c8e05783-9c2e-47df-c37c-a0381bb1f0b5",
+        "outputId": "4e0eae3c-cf7f-4e9b-fe87-a230f0490419",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -544,7 +555,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 42
         }
       ]
     },
@@ -556,28 +567,28 @@
       ],
       "metadata": {
         "id": "6s0C0ihtt2hV",
-        "outputId": "4687ce7d-4a85-4316-c32e-914c3b2f5842",
+        "outputId": "2f145882-2dd5-4df8-9d32-330c37fd4669",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'destination': 'Hawaii',\n",
-              " 'days_until_trip': 152,\n",
-              " 'weekly_savings_needed': 175.0,\n",
-              " 'daily_savings_needed': 25.0,\n",
+              " 'days_until_trip': 150,\n",
+              " 'weekly_savings_needed': 177.33,\n",
+              " 'daily_savings_needed': 25.33,\n",
               " 'progress_percentage': 24.0,\n",
-              " 'motivation': \"Just $175.0 per week until you're in Hawaii!\",\n",
+              " 'motivation': \"Just $177.33 per week until you're in Hawaii!\",\n",
               " 'coffee_equivalent': \"That's about 35.0 coffees per week\"}"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 43
         }
       ]
     },
@@ -588,12 +599,12 @@
       ],
       "metadata": {
         "id": "VpryzUhduBm_",
-        "outputId": "773f6850-5730-4ce8-9c99-0dc5216f0988",
+        "outputId": "3c1c3a3c-addd-4b4a-f928-099e9fae7d21",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +621,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 44
         }
       ]
     },
@@ -621,12 +632,12 @@
       ],
       "metadata": {
         "id": "Xeg9_wOSuK7m",
-        "outputId": "f1bc812c-7fa4-4023-aae5-fef56669dd63",
+        "outputId": "ef9e14c7-b4f3-4326-e2f3-32afaf931852",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -643,7 +654,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 45
         }
       ]
     },
@@ -661,12 +672,12 @@
       ],
       "metadata": {
         "id": "YDEiJFCJuNlz",
-        "outputId": "1871f8ae-b48c-448c-b423-a5df83ae62a2",
+        "outputId": "bdf2a51f-4441-438f-edf2-2a5f79d8b470",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,9 +696,145 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Thought-Action-Observation** Cycle"
+      ],
+      "metadata": {
+        "id": "DBjX-0-ozIAq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Approach**:\\\n",
+        "Every Agent works in a Thought-Action-Observation Cycle.\n",
+        "\n",
+        "**Thought**: The Agent first reads the Query and plans the perfect set of steps that needs to be executed in order to get the query's output.\n",
+        "\n",
+        "Here, We try to adopt a prompt-engineering approach, where we specify the list of tools that would be used for our project. The LLM would read our query and list the most appropriate tool call/s to get the output."
+      ],
+      "metadata": {
+        "id": "8uY8_Pxy_F1j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Thought Prompt:\n",
+        "def buildThoughtPrompt(work, toollist:Tool) -> str:\n",
+        "  agentPrompt = f\"You are an AI-system equipped with some tools. You are an expert {work}\"\n",
+        "  outputGeneration = \"\"\"\n",
+        "    You are expected to plan and reason the steps that need to be taken in order to arrive at the expected answer.\n",
+        "    Each step of your thinking should be shown as a dictionary element contained within a Python list.\n",
+        "    Each step should only contain the work related to the tool and nothing else.\n",
+        "    If the query can be resolved within a single step- go for it; Else document each step in the format given below.\n",
+        "    ```python\n",
+        "    [\n",
+        "      {\n",
+        "        \"thought\": \"a-one-sentence-description-of-why-you-selected-this-tool\",\n",
+        "        \"action\": (Tool_Name, *args, **kwargs)\n",
+        "      },\n",
+        "      ...\n",
+        "    ]\n",
+        "    ```\n",
+        "    Only generate this python object- do not generate any extra code or explainatory text\n",
+        "    Here are your Tools.\n",
+        "  \"\"\"\n",
+        "  agentPrompt += outputGeneration\n",
+        "  for key, val in toolFamily.list_tools().items():\n",
+        "    samp = f\"\\nTool Name:\\t{key}\\nTool Description:\\n{val}\\n\"\n",
+        "    agentPrompt += samp\n",
+        "  return agentPrompt"
+      ],
+      "metadata": {
+        "id": "IRumCV6OA02A"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Action**: Are the concrete steps an AI Agent Takes to interact with it's environment"
+      ],
+      "metadata": {
+        "id": "lxclbuuGJ0gy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# First, we would want our Agent to be a seperate object to make things easier:\n",
+        "class Agent():\n",
+        "  def __init__(self, work, toolfamily, llm_client):\n",
+        "    self.work = work\n",
+        "    self.toolfamily = toolfamily\n",
+        "    self.thought_prompt = buildThoughtPrompt(work, toolfamily)\n",
+        "    self.llm = llm_client\n",
+        "\n",
+        "  def _think(self, query) -> list:\n",
+        "    \"\"\"Runs the Thinking Step of the Agent\"\"\"\n",
+        "    prompt = f\"{self.thought_prompt}\\n\\nHere is your Query {query}\"\n",
+        "    answer = self.llm.generate_content(prompt)\n",
+        "    answer = answer.replace(\"python\", \"\").replace(\"```\", \"\")\n",
+        "    return eval(answer)\n",
+        "\n",
+        "  def _act(self, thought: list[dict]) -> list:\n",
+        "      \" Runs the Action step of the Agent\"\n",
+        "      results = []\n",
+        "      for step in thought:\n",
+        "          action_tuple = step.get(\"action\")\n",
+        "          if not action_tuple:\n",
+        "              continue  # Skip malformed steps\n",
+        "          tool_name, *args = action_tuple\n",
+        "          result = self.toolfamily.call(tool_name)(*args)\n",
+        "          results.append(result)\n",
+        "      return results\n",
+        "  def run(self, query):\n",
+        "    thoughts = self._think(query)\n",
+        "    data = self._act(thoughts)\n",
+        "    return data"
+      ],
+      "metadata": {
+        "id": "6BK5giwI2Y64"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "financeAgent = Agent(\n",
+        "    work = \"Financial Agent\",\n",
+        "    toolfamily= toolFamily,\n",
+        "    llm_client= client\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "nWtF1qPkkQjI"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sampleQuestion = \"\"\"\n",
+        "  I wanna take a little vacation to Sri Lanka where the trip cost is approx INR 45,000; I would like to leave on the second week of december-- I have INR 3000 in my a/c.. Would I be able to take the trip?\n",
+        "\"\"\"\n",
+        "# dct = financeAgent.run(sampleQuestion)"
+      ],
+      "metadata": {
+        "id": "iOJoGNVZkcko"
+      },
+      "execution_count": 85,
+      "outputs": []
     }
   ]
 }
