Fixed all errors! Need to work on the observe clause

--- a/LLM Engineering/Agentic AI/AgentsByHand.ipynb
+++ b/LLM Engineering/Agentic AI/AgentsByHand.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjsV+fWEbXd9GuIMVm0laJ",
+      "authorship_tag": "ABX9TyNKsYVy9pjYsAkIlo3Q1WmA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 2,
       "metadata": {
         "id": "wT4WCeG-J2jb"
       },
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "MAEKdNZmK7wB"
       },
-      "execution_count": 62,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "MxoWNaasLncS"
       },
-      "execution_count": 55,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -135,15 +135,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cm9uLWPsPfeN",
-        "outputId": "fa24dc9c-6d64-41d7-b0ec-3d6d121b38d2"
+        "outputId": "4b40beeb-382e-4ec1-83fb-040e4401fd1b"
       },
-      "execution_count": 63,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Response: ലക്ഷ്യങ്ങൾ നേടാനായി സ്വയം ചിന്തിച്ച് പ്രവർത്തിക്കുന്ന ആർട്ടിഫിഷ്യൽ ഇൻ്റലിജൻസ് സംവിധാനങ്ങളാണ് AI ഏജൻ്റുമാർ.\n"
+            "Response: ലക്ഷ്യങ്ങൾ നേടുന്നതിനായി ചുറ്റുപാടുകളെ ഗ്രഹിച്ച്, തീരുമാനങ്ങളെടുത്ത്, സ്വയം പ്രവർത്തിക്കാൻ കഴിവുള്ള ആർട്ടിഫിഷ്യൽ ഇന്റലിജൻസ് സംവിധാനങ്ങളാണ് AI ഏജന്റുകൾ.\n"
           ]
         }
       ]
@@ -162,31 +162,33 @@
       "source": [
         "# Tool Registry:\n",
         "class Tool:\n",
-        "  def __init__(self):\n",
-        "    self.tools = {}\n",
-        "  def registerTool(self, name=None, description=None):\n",
-        "    \"Records a Tool\"\n",
-        "    def decorator(func):\n",
-        "      tool_name = name or func.__name__\n",
-        "      self.tools[tool_name] = {\n",
-        "          \"function_name\":func,\n",
-        "          \"description\":description or func.__doc__,\n",
-        "          \"call\": \"tool_name(*args, **kwargs)\"\n",
-        "      }\n",
-        "      return func\n",
-        "    return decorator\n",
+        "    def __init__(self):\n",
+        "        self.tools = {}\n",
         "\n",
-        "  def call(self, tool_name:str, *args,**kwargs):\n",
-        "    if tool_name not in self.tools:\n",
-        "      raise ValueError(f\"Tool '{tool_name}' does not exist.\")\n",
-        "    return self.tools[tool_name][\"function_name\"](*args, **kwargs)\n",
-        "  def list_tools(self):\n",
-        "    return {name:meta[\"description\"] for name, meta in self.tools.items()}"
+        "    def registerTool(self, name=None, description=None):\n",
+        "        \"\"\"Records a Tool\"\"\"\n",
+        "        def decorator(func):\n",
+        "            tool_name = name or func.__name__\n",
+        "            self.tools[tool_name] = {\n",
+        "                \"function_name\": func,\n",
+        "                \"description\": description or func.__doc__,\n",
+        "                \"call\": lambda *args, **kwargs: func(*args, **kwargs)\n",
+        "            }\n",
+        "            return func\n",
+        "        return decorator\n",
+        "\n",
+        "    def call(self, tool_name: str, *args, **kwargs):\n",
+        "        if tool_name not in self.tools:\n",
+        "            raise ValueError(f\"Tool '{tool_name}' does not exist.\")\n",
+        "        return self.tools[tool_name][\"call\"](*args, **kwargs)\n",
+        "\n",
+        "    def list_tools(self):\n",
+        "        return {name: meta[\"description\"] for name, meta in self.tools.items()}\n"
       ],
       "metadata": {
         "id": "ywzL29QtLwsO"
       },
-      "execution_count": 34,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -198,7 +200,7 @@
       "metadata": {
         "id": "K4VZ9jl7hElp"
       },
-      "execution_count": 35,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -261,7 +263,7 @@
       "metadata": {
         "id": "kk7JEoPHcSH2"
       },
-      "execution_count": 36,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -318,7 +320,7 @@
       "metadata": {
         "id": "tI5h02StcUEo"
       },
-      "execution_count": 37,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -385,7 +387,7 @@
       "metadata": {
         "id": "jSu2yXDtcVoy"
       },
-      "execution_count": 38,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -435,7 +437,7 @@
       "metadata": {
         "id": "RzN4bfSEcYQH"
       },
-      "execution_count": 39,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -494,7 +496,7 @@
       "metadata": {
         "id": "pMbhkFYhbqB8"
       },
-      "execution_count": 40,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -505,12 +507,12 @@
       ],
       "metadata": {
         "id": "KErY3Hf2mMrn",
-        "outputId": "aaaf0acb-5ee2-4c5a-f92a-2690670ab764",
+        "outputId": "b7c95ec8-51d8-49a0-abd3-644972fde6ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +526,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 22
         }
       ]
     },
@@ -536,12 +538,12 @@
       ],
       "metadata": {
         "id": "lNg-RruBtQKQ",
-        "outputId": "4e0eae3c-cf7f-4e9b-fe87-a230f0490419",
+        "outputId": "48c1ba23-7b96-4faf-8582-7479bab10f66",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +557,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 23
         }
       ]
     },
@@ -567,28 +569,28 @@
       ],
       "metadata": {
         "id": "6s0C0ihtt2hV",
-        "outputId": "2f145882-2dd5-4df8-9d32-330c37fd4669",
+        "outputId": "5feab1db-ad3e-4953-cd9e-5bed80743f2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'destination': 'Hawaii',\n",
-              " 'days_until_trip': 150,\n",
-              " 'weekly_savings_needed': 177.33,\n",
-              " 'daily_savings_needed': 25.33,\n",
+              " 'days_until_trip': 146,\n",
+              " 'weekly_savings_needed': 182.19,\n",
+              " 'daily_savings_needed': 26.03,\n",
               " 'progress_percentage': 24.0,\n",
-              " 'motivation': \"Just $177.33 per week until you're in Hawaii!\",\n",
-              " 'coffee_equivalent': \"That's about 35.0 coffees per week\"}"
+              " 'motivation': \"Just $182.19 per week until you're in Hawaii!\",\n",
+              " 'coffee_equivalent': \"That's about 36.0 coffees per week\"}"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 24
         }
       ]
     },
@@ -599,12 +601,12 @@
       ],
       "metadata": {
         "id": "VpryzUhduBm_",
-        "outputId": "3c1c3a3c-addd-4b4a-f928-099e9fae7d21",
+        "outputId": "10d3b69b-8a46-4d32-d650-b4bf66709bb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +623,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 25
         }
       ]
     },
@@ -632,12 +634,12 @@
       ],
       "metadata": {
         "id": "Xeg9_wOSuK7m",
-        "outputId": "ef9e14c7-b4f3-4326-e2f3-32afaf931852",
+        "outputId": "b1c0146f-027d-47c9-a4ae-42c8bd2808d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +656,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 26
         }
       ]
     },
@@ -672,12 +674,12 @@
       ],
       "metadata": {
         "id": "YDEiJFCJuNlz",
-        "outputId": "bdf2a51f-4441-438f-edf2-2a5f79d8b470",
+        "outputId": "e840092c-1cc3-43b5-e08b-6032ec5347af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +698,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 27
         }
       ]
     },
@@ -755,7 +757,7 @@
       "metadata": {
         "id": "IRumCV6OA02A"
       },
-      "execution_count": 47,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -786,16 +788,25 @@
         "    return eval(answer)\n",
         "\n",
         "  def _act(self, thought: list[dict]) -> list:\n",
-        "      \" Runs the Action step of the Agent\"\n",
         "      results = []\n",
         "      for step in thought:\n",
         "          action_tuple = step.get(\"action\")\n",
         "          if not action_tuple:\n",
-        "              continue  # Skip malformed steps\n",
+        "              continue\n",
         "          tool_name, *args = action_tuple\n",
-        "          result = self.toolfamily.call(tool_name)(*args)\n",
+        "          tool_fn = self.toolfamily.tools[tool_name][\"function_name\"]\n",
+        "\n",
+        "          # Handle case: single argument which is a dict → unpack as kwargs\n",
+        "          if len(args) == 1 and isinstance(args[0], dict):\n",
+        "              result = tool_fn(**args[0])\n",
+        "          else:\n",
+        "              result = tool_fn(*args)\n",
+        "\n",
         "          results.append(result)\n",
         "      return results\n",
+        "  def _observe(self, data:list):\n",
+        "    return \"\", \"\"\n",
+        "\n",
         "  def run(self, query):\n",
         "    thoughts = self._think(query)\n",
         "    data = self._act(thoughts)\n",
@@ -804,7 +815,7 @@
       "metadata": {
         "id": "6BK5giwI2Y64"
       },
-      "execution_count": 80,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -819,22 +830,54 @@
       "metadata": {
         "id": "nWtF1qPkkQjI"
       },
-      "execution_count": 81,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "sampleQuestion = \"\"\"\n",
-        "  I wanna take a little vacation to Sri Lanka where the trip cost is approx INR 45,000; I would like to leave on the second week of december-- I have INR 3000 in my a/c.. Would I be able to take the trip?\n",
+        "  I wanna take a little vacation to Sri Lanka where the trip cost is approx INR 45,000; I would like to leave on the second week of december which is 11/12/2025, today being 21/7/2025-- I have INR 3000 in my a/c.. Would I be able to take the trip?\n",
         "\"\"\"\n",
-        "# dct = financeAgent.run(sampleQuestion)"
+        "dct = financeAgent.run(sampleQuestion)"
       ],
       "metadata": {
         "id": "iOJoGNVZkcko"
       },
-      "execution_count": 85,
+      "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dct"
+      ],
+      "metadata": {
+        "id": "hv10B9x7zrQw",
+        "outputId": "e5f8533b-b278-487c-fb8f-941788f6694a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'destination': 'Sri Lanka',\n",
+              "  'days_until_trip': 142,\n",
+              "  'weekly_savings_needed': 2070.42,\n",
+              "  'daily_savings_needed': 295.77,\n",
+              "  'progress_percentage': 6.67,\n",
+              "  'motivation': \"Just $2070.42 per week until you're in Sri Lanka!\",\n",
+              "  'coffee_equivalent': \"That's about 414.0 coffees per week\"}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     }
   ]
 }
