--- a/LLM Engineering/Agentic AI/AgentsByHand.ipynb
+++ b/LLM Engineering/Agentic AI/AgentsByHand.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNKsYVy9pjYsAkIlo3Q1WmA",
+      "authorship_tag": "ABX9TyMQY3WS1FRNlwcCO2oNsRzc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,22 +30,11 @@
       "cell_type": "markdown",
       "source": [
         "**The Tokenized Tech**\\\n",
-        "**Article 1:** Write an AI Agent Like It's 1999"
+        "Intro to Agents, the old fashioned way\n"
       ],
       "metadata": {
-        "id": "Nzcw5_MXhgwu"
+        "id": "zccSYQJxEmzT"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# !pip install -q dotenv"
-      ],
-      "metadata": {
-        "id": "oaaL_kkaLfcI"
-      },
-      "execution_count": 1,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -804,18 +793,31 @@
         "\n",
         "          results.append(result)\n",
         "      return results\n",
-        "  def _observe(self, data:list):\n",
-        "    return \"\", \"\"\n",
+        "  def _observe(self, query, thought, data):\n",
+        "    prompt = f\"\"\"\n",
+        "      You are a finance agent- and you have performed certain operations.\n",
+        "      The query that was given to you was:\n",
+        "        {query}\n",
+        "      The Thought you processed was:\n",
+        "        {thought}\n",
+        "      The Data You recieved was:\n",
+        "        {data}\n",
+        "      Now, combine these information and give a suitable reply for the user.\n",
+        "      Notes: Give Smart financial answers related to the query-- and your answer should satisfy the user's question.\n",
+        "    \"\"\"\n",
+        "    answer = self.llm.generate_content(prompt)\n",
+        "    return answer\n",
         "\n",
         "  def run(self, query):\n",
         "    thoughts = self._think(query)\n",
-        "    data = self._act(thoughts)\n",
-        "    return data"
+        "    action = self._act(thoughts)\n",
+        "    observation = self._observe(query, thoughts, action)\n",
+        "    return observation"
       ],
       "metadata": {
         "id": "6BK5giwI2Y64"
       },
-      "execution_count": 49,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -830,52 +832,63 @@
       "metadata": {
         "id": "nWtF1qPkkQjI"
       },
-      "execution_count": 50,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "sampleQuestion = \"\"\"\n",
-        "  I wanna take a little vacation to Sri Lanka where the trip cost is approx INR 45,000; I would like to leave on the second week of december which is 11/12/2025, today being 21/7/2025-- I have INR 3000 in my a/c.. Would I be able to take the trip?\n",
+        "multi_action_prompt = \"\"\"\n",
+        "Hey, I’m trying to take control of my finances and need your help with a few things.\n",
+        "\n",
+        "1. I want to plan a trip to Sri Lanka that will cost me about ₹45,000. I currently have ₹3,000 saved and I’m hoping to leave in mid-December this year(2025). Can you tell me how much I need to save weekly to make it?\n",
+        "\n",
+        "2. Also, I live alone in Bangalore, spend around ₹25,000 a month, and work in a startup, so my job stability is moderate. I have two dependents: my mom and younger brother. Can you tell me what my emergency fund goal should be?\n",
+        "\n",
+        "3. Lastly, I’ve got a bunch of subscriptions that I’m not sure I’m using wisely. Here’s the list:\n",
+        "   - Netflix: ₹649/month, ~10 hours/month\n",
+        "   - Spotify: ₹119/month, ~20 hours/month\n",
+        "   - Notion AI: ₹800/year, ~5 hours/month\n",
+        "   - Headspace: ₹500/year, ~1 hour/month\n",
+        "\n",
+        "Please audit this and tell me where I’m wasting money.\n",
+        "Could you give me a list of where all I should save this money?\n",
+        "Help me prioritize all this!\n",
         "\"\"\"\n",
-        "dct = financeAgent.run(sampleQuestion)"
+        "result = financeAgent.run(multi_action_prompt)"
       ],
       "metadata": {
         "id": "iOJoGNVZkcko"
       },
-      "execution_count": 53,
+      "execution_count": 70,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dct"
+        "import markdown\n",
+        "from IPython.display import Markdown\n",
+        "display(Markdown(result))"
       ],
       "metadata": {
-        "id": "hv10B9x7zrQw",
-        "outputId": "e5f8533b-b278-487c-fb8f-941788f6694a",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "hv10B9x7zrQw",
+        "outputId": "66c71549-4723-47b4-9c8e-efc0bc39ebc8"
       },
-      "execution_count": 54,
+      "execution_count": 71,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
-              "[{'destination': 'Sri Lanka',\n",
-              "  'days_until_trip': 142,\n",
-              "  'weekly_savings_needed': 2070.42,\n",
-              "  'daily_savings_needed': 295.77,\n",
-              "  'progress_percentage': 6.67,\n",
-              "  'motivation': \"Just $2070.42 per week until you're in Sri Lanka!\",\n",
-              "  'coffee_equivalent': \"That's about 414.0 coffees per week\"}]"
-            ]
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "Hey there! It's great you're taking proactive steps to manage your finances. I've analyzed your situation and have a clear plan for you.\n\nHere's a breakdown of my recommendations for your trip, emergency fund, and subscriptions:\n\n---\n\n### 1. Your Sri Lanka Trip Savings Plan\n\n*   **Goal:** ₹45,000 for your trip to Sri Lanka by mid-December 2025.\n*   **Current Savings:** ₹3,000.\n*   **Time Horizon:** You have approximately **146 days (about 20 weeks)** until your planned departure date in mid-December 2025.\n*   **Savings Needed:** To reach your goal, you'll need to save approximately **₹2,013.70 per week**.\n*   **Progress So Far:** You've already covered **6.67%** of your trip cost!\n*   **Motivation:** You're just ₹2,013.70 per week away from enjoying the beautiful beaches and culture of Sri Lanka!\n\n**Smart Tip for Trip Savings:** Consider setting up a dedicated savings account for your trip and automate weekly transfers. Also, look for ways to cut back on small, discretionary expenses, like dining out less, to free up more funds for your travel goal.\n\n---\n\n### 2. Your Emergency Fund Goal\n\nGiven you live alone in Bangalore, have moderate job stability (working in a startup), and support two dependents (your mom and younger brother), a robust emergency fund is crucial.\n\n*   **Your Monthly Expenses:** ₹25,000.\n*   **Recommended Coverage:** For your situation, I recommend aiming for an emergency fund that covers **6 months of your essential living expenses.** This provides a good safety net given your job stability and dependents.\n*   **Target Amount:** Your emergency fund goal should be **₹1,50,000.**\n*   **Savings Goals:**\n    *   To reach this, you would need to save **₹12,500 per month.**\n    *   Broken down weekly, that's approximately **₹3,125 per week.**\n*   **Motivation:** Building this fund will give you immense peace of mind, knowing you have 6 months of expenses covered in case of an unexpected event. You'll definitely sleep better!\n\n**Smart Tip for Emergency Fund:** Start small if the numbers feel overwhelming. Even saving ₹500-₹1,000 a week consistently adds up quickly. Treat it like a non-negotiable bill and automate transfers to a separate, easily accessible savings account.\n\n---\n\n### 3. Subscription Audit\n\nLet's dive into your subscriptions to find some savings!\n\n*   **Total Monthly Cost of Subscriptions:** You are currently spending about **₹876.33 per month** on these subscriptions, which translates to **₹10,516 annually.** As a reality check, that's a significant amount!\n\nHere's the breakdown of your usage:\n\n*   **Netflix:** ₹649/month, ~10 hours/month\n*   **Spotify:** ₹119/month, ~20 hours/month\n*   **Notion AI:** ₹800/year (approx. ₹66.67/month), ~5 hours/month\n*   **Headspace:** ₹500/year (approx. ₹41.67/month), ~1 hour/month\n\n**Where You Might Be Wasting Money:**\n\n*   **Headspace:** At ₹500/year (₹41.67/month) for only ~1 hour of usage per month, your cost per hour is quite high at ₹41.67. This appears to be significantly underutilized.\n\n**Potential Savings:**\n\n*   By canceling **Headspace**, you could save **₹41.67 per month** (or ₹500.04 annually).\n\n**Recommendation:** I recommend canceling your **Headspace** subscription. If you still want to practice mindfulness, there are many free meditation apps or guided meditations available on platforms like YouTube that might serve your needs without the recurring cost.\n\n---\n\n### Where to Save This Money & Prioritization\n\nYou've got some clear opportunities to optimize your finances! Here's how I recommend you allocate your potential savings and prioritize your goals:\n\n**Where to Save the Money:**\n\nThe immediate savings from canceling **Headspace (₹41.67/month)** should be directed towards your most critical financial goals.\n\n**Prioritization:**\n\nBased on your situation (moderate job stability, dependents), here's a smart prioritization:\n\n1.  **Emergency Fund (Highest Priority):**\n    *   **Why:** This is your foundational safety net. With dependents and moderate job stability, having 6 months of expenses covered is crucial for financial security and peace of mind.\n    *   **Action:** Dedicate the **₹41.67 you save from Headspace** directly towards your emergency fund. Aim to hit your **₹150,000 target** as quickly as possible, saving **₹3,125 per week**. You might need to look for other areas to cut expenses or explore side income opportunities to hit this weekly target.\n\n2.  **Sri Lanka Trip Savings (Concurrent Priority):**\n    *   **Why:** While important for your well-being and personal goals, it's a discretionary expense. You can pursue this concurrently with your emergency fund, but ensure your emergency fund isn't neglected.\n    *   **Action:** Continue saving **₹2,013.70 per week** for your trip.\n\n**Putting It All Together - Your Weekly Savings Goal:**\n\nTo achieve both your emergency fund goal (assuming you prioritize it and want to build it faster) and your trip, you'd ideally be aiming to save:\n\n*   Emergency Fund: **₹3,125 per week**\n*   Sri Lanka Trip: **₹2,013.70 per week**\n*   **Total Ideal Weekly Savings: ₹5,138.70**\n\nThis might seem like a lot, but remember:\n\n*   The **₹41.67/month from Headspace** is a direct contribution.\n*   Reviewing your larger expenses: Your monthly spending of ₹25,000 for living alone in Bangalore leaves room for analysis. Could you optimize rent, food, or transportation costs further to free up more capital for your savings goals?\n*   **Netflix and Spotify:** While you use them, consider if a cheaper plan for Netflix (if available and suits your needs) or a family plan with friends/family for Spotify (if applicable) could further reduce costs without sacrificing too much.\n\n**Key Takeaways:**\n\n*   **Automate Savings:** Set up automatic transfers from your checking to your dedicated emergency fund and trip savings accounts. \"Pay yourself first.\"\n*   **Track Expenses:** Keep a close eye on where your ₹25,000 monthly expenses go. You might uncover more areas to save.\n*   **Review Regularly:** Make it a habit to review your subscriptions and spending every few months. Your needs and usage can change.\n\nYou've got a solid plan now to gain control of your finances. You can do this!"
           },
-          "metadata": {},
-          "execution_count": 54
+          "metadata": {}
         }
       ]
     }
