--- a/LLM Engineering/Agentic AI/AgentsByHand.ipynb
+++ b/LLM Engineering/Agentic AI/AgentsByHand.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9RajylseJncDpWmpOgzG8",
+      "authorship_tag": "ABX9TyODOXxqz3tbqJqZVoCsMZ68",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,22 +37,53 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Configure Imports and API Credentials"
+      ],
+      "metadata": {
+        "id": "yg3jHlxiU6CE"
+      }
+    },
+    {
       "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import requests"
+      ],
+      "metadata": {
+        "id": "qcarByV4VCdi"
+      },
       "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "wT4WCeG-J2jb"
       },
       "outputs": [],
       "source": [
-        "# Code for Google-colab platforms\n",
+        "# --- For Google Colab Users ---\n",
         "from google.colab import userdata\n",
-        "api_key = userdata.get(\"GeminiAPI\") or \"YOUR-GEMINI-API-KEY\""
+        "\n",
+        "# Retrieve Gemini API key securely from Colab's userdata storage\n",
+        "api_key = userdata.get(\"GeminiAPI\") or \"REPLACE-YOUR-GEMINI-API-KEY-HERE\"\n",
+        "\n",
+        "# --- For Local Development Environments ---\n",
+        "# Uncomment the lines below when running outside Colab\n",
+        "\n",
+        "# import os\n",
+        "# from dotenv import load_dotenv\n",
+        "# load_dotenv()  # Load environment variables from a .env file\n",
+        "# api_key = os.getenv(\"GEMINI_API_KEY\")"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Gemini Client** \\\n",
+        "## Initializing the **Gemini Client**\n",
         "*Custom Implementation*"
       ],
       "metadata": {
@@ -62,13 +93,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Custom Gemini Client:\n",
-        "import os\n",
-        "import requests\n",
-        "\n",
-        "# from dotenv import load_env\n",
-        "# api_key = os.getenviron(\"GEMINI_API_KEY\")\n",
-        "\n",
         "class GeminiClient:\n",
         "\tdef __init__(self, api_key: str):\n",
         "\t\tself.api_key = api_key\n",
@@ -96,7 +120,7 @@
       "metadata": {
         "id": "MAEKdNZmK7wB"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -108,14 +132,14 @@
       "metadata": {
         "id": "MxoWNaasLncS"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Sample Prompt:\n",
-        "prompt = \"Explain what are AI Agents in a sentence. in Malayalam\"\n",
+        "prompt = \"Explain what are AI Agents in a sentence.\"\n",
         "response = client.generate_content(prompt)\n",
         "print(f\"Response: {response}\")"
       ],
@@ -124,15 +148,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cm9uLWPsPfeN",
-        "outputId": "5653f68c-1f14-464c-eb04-19f2ecea6e95"
+        "outputId": "b5dd46ad-d06f-4929-edd0-929d3f89f944"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Response: എഐ ഏജൻ്റുകൾ എന്നാൽ, ചുറ്റുപാടുകളിൽ നിന്ന് വിവരങ്ങൾ മനസ്സിലാക്കി, തന്നിരിക്കുന്ന ലക്ഷ്യങ്ങൾ നേടുന്നതിനായി സ്വതന്ത്രമായി പ്രവർത്തിക്കുന്ന നിർമ്മിത ബുദ്ധി സംവിധാനങ്ങളാണ്.\n"
+            "Response: AI Agents are autonomous AI programs designed to perceive their environment, make decisions, and take actions to achieve specific goals.\n"
           ]
         }
       ]
@@ -140,10 +164,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Defining Our Tools**"
+        "## Define **Tool Registry** and associated Tools"
       ],
       "metadata": {
-        "id": "8MXH66onLtgi"
+        "id": "1E148MGGY-IY"
       }
     },
     {
@@ -177,7 +201,7 @@
       "metadata": {
         "id": "ywzL29QtLwsO"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +213,7 @@
       "metadata": {
         "id": "K4VZ9jl7hElp"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -252,7 +276,7 @@
       "metadata": {
         "id": "kk7JEoPHcSH2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -309,7 +333,7 @@
       "metadata": {
         "id": "tI5h02StcUEo"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +400,7 @@
       "metadata": {
         "id": "jSu2yXDtcVoy"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +450,7 @@
       "metadata": {
         "id": "RzN4bfSEcYQH"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -485,7 +509,7 @@
       "metadata": {
         "id": "pMbhkFYhbqB8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -501,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -532,7 +556,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -563,7 +587,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +652,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +692,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +831,7 @@
       "metadata": {
         "id": "6BK5giwI2Y64"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -822,7 +846,7 @@
       "metadata": {
         "id": "nWtF1qPkkQjI"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -850,7 +874,7 @@
       "metadata": {
         "id": "iOJoGNVZkcko"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +893,7 @@
         "id": "hv10B9x7zrQw",
         "outputId": "9eb0370f-8975-41b5-ee25-0e0b40f4e07f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
