--- a/LLM Engineering/Agentic AI/AgentsByHand.ipynb
+++ b/LLM Engineering/Agentic AI/AgentsByHand.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTG05o24gmssQXeawP9oHr",
+      "authorship_tag": "ABX9TyN+fySB/pA0ii2j7CI+0J4b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,14 +23,17 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aaronmat1905/the-tokenized-tech/blob/main/LLM%20Engineering/Agentic%20AI/AgentsByHand.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aaronmat1905/neural-noteworks/blob/main/LLM%20Engineering/Agentic%20AI/AgentsByHand.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**The Tokenized Tech**\\\n",
-        "Intro to Agents, the old fashioned way\n"
+        "# **Building AI Agents from Scratch**: A Hands-On Introduction\n",
+        "\n",
+        "**The Neural Noteworks** by *Aaron TM*\n",
+        "\n",
+        "AI Agents Explained — by Building One from Scratch.\n"
       ],
       "metadata": {
         "id": "zccSYQJxEmzT"
@@ -39,7 +42,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Configure Imports and API Credentials"
+        "Welcome to this Python Notebook!\\\n",
+        "This notebook accompanies the article available at: [link]\n",
+        "\n",
+        "If you find this helpful, please consider supporting our work by sharing it and connecting with me on LinkedIn. Your support helps us reach more learners—and it might just help a friend of yours too!"
+      ],
+      "metadata": {
+        "id": "yDYE_ljtKteS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **The Basics**\n",
+        "**What Are AI Agents?**\n",
+        "\n",
+        "> An Agentic system makes clever decisions based on a user query using an LLM; It then uses the tools it has access to come up to the solution\n",
+        "\n",
+        "An AI-Agent is a system. This system contains two components:\n",
+        "\n",
+        "\n",
+        "A **LLM** along with **Tools**\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "The **LLM (Large Language Model)** acts as a smart decision maker. It reads in a query, understands it's intent and figures out some steps that are needed to finish out that task.\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "A **Tool** is a list of functionalities made available to the Decision making LLM. The Agent uses these tools in order to gather data or insights about the task it needs to solve.\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\\\n",
+        "\n",
+        "# **What’s in this Notebook?**\n",
+        "\n",
+        "\n",
+        "In this notebook, I’ve implemented an AI Agent from scratch—with no external frameworks like LangChain, CrewAI, or Haystack. Just pure Python.\n",
+        "\n",
+        "Then, we take this minimal agent and apply it to build a **Finance Agent** that can respond to personal finance queries.\n",
+        "\n",
+        "So, buckle up and follow along. Let’s build something exciting, step by step!\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gOZYZHRYL8Zd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Configure Imports and API Credentials"
       ],
       "metadata": {
         "id": "yg3jHlxiU6CE"
@@ -54,12 +110,12 @@
       "metadata": {
         "id": "qcarByV4VCdi"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "wT4WCeG-J2jb"
       },
@@ -83,7 +139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Initializing the **Gemini Client**\n",
+        "# Initializing the **Gemini Client**\n",
         "*Custom Implementation*"
       ],
       "metadata": {
@@ -120,7 +176,7 @@
       "metadata": {
         "id": "MAEKdNZmK7wB"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -132,7 +188,7 @@
       "metadata": {
         "id": "MxoWNaasLncS"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +206,7 @@
         "id": "Cm9uLWPsPfeN",
         "outputId": "377a3807-2fa6-4411-9001-7e5645a1790c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +220,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Define **Tool Registry** and associated Tools"
+        "# Define **Tool Registry** and associated Tools"
       ],
       "metadata": {
         "id": "1E148MGGY-IY"
@@ -201,7 +257,7 @@
       "metadata": {
         "id": "ywzL29QtLwsO"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,16 +269,18 @@
       "metadata": {
         "id": "K4VZ9jl7hElp"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem Statement:**  Create an Agent for Personal Financial Wellness & Life Planning"
+        "### The **Finance Agent**:\n",
+        "**Problem Statement:**  Create an Agent for Personal Financial Wellness & Life Planning\\\n",
+        "In the Section below, we define the tools needed for our finance Agent:\n"
       ],
       "metadata": {
-        "id": "5iFbC_hhhLnK"
+        "id": "vOQS4018ORRt"
       }
     },
     {
@@ -282,7 +340,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -361,7 +419,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +509,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +584,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +676,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +714,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,7 +789,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##**Building the Agent**:"
+        "# **Building the Agent**:"
       ],
       "metadata": {
         "id": "LYCPIMiBa1rl"
@@ -869,7 +927,7 @@
       "metadata": {
         "id": "6BK5giwI2Y64"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -884,7 +942,7 @@
       "metadata": {
         "id": "nWtF1qPkkQjI"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +974,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1036,7 +1094,7 @@
         "id": "hv10B9x7zrQw",
         "outputId": "2ffae406-796a-4796-9920-0613f6976cf5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
